Add new translations

--- a/frames/settings.html
+++ b/frames/settings.html
@@ -313,8 +313,10 @@
                             <div class="col-sm-4">
                                 <select id="language" class="form-control">
                                     <option value="en">English</option>
-                                    <option value="de">German</option>
                                     <option value="nl">Dutch</option>
+                                    <option value="fr">French</option>
+                                    <option value="de">German</option>
+                                    <option value="tr">Turkish</option>
                                 </select>
                             </div>
                             <label id="languageSaved" style="display: none" class="control-label"></label>
@@ -372,7 +374,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-2">
+                            <div class="col-sm-3">
                                 <button id="restoreDefaults" type="button" class="btn btn-primary btn-sm"></button>
                             </div>
                             <label id="restoreDefaultsSuccess" style="display: none" class="control-label"></label>
