Add new translations

--- a/frames/settings.html
+++ b/frames/settings.html
@@ -313,9 +313,11 @@
                             <div class="col-sm-4">
                                 <select id="language" class="form-control">
                                     <option value="en">English</option>
+                                    <option value="be">Belgium</option>
                                     <option value="nl">Dutch</option>
                                     <option value="fr">French</option>
                                     <option value="de">German</option>
+                                    <option value="gr">Greek</option>
                                     <option value="tr">Turkish</option>
                                 </select>
                             </div>
