Fix encoding bug, add right click functionality

--- a/frames/players/movie-player.html
+++ b/frames/players/movie-player.html
@@ -5,6 +5,7 @@
         <title>Movie player</title>
         <!-- Javascripts -->
         <script type='text/javascript' src="/js/extensions/jquery.min.js"></script>
+        <script src="/js/extensions/nwcontextmenu.js"></script>
         <!-- Styles -->
         <!--        <link href="/styles/video-skin.css" rel="stylesheet">-->
         <link href="/styles/bootstrap.min.css" rel="stylesheet">
