--- a/frames/players/serie-player.html
+++ b/frames/players/serie-player.html
@@ -6,6 +6,7 @@
         <!-- Javascripts -->
         <script type='text/javascript' src="/js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="/js/extensions/bootstrap.min.js"></script>
+        <script src="/js/extensions/nwcontextmenu.js"></script>
 
         <!-- Styles -->
         <link href="/styles/video-skin.css" rel="stylesheet">
