--- a/frames/trailer.html
+++ b/frames/trailer.html
@@ -9,6 +9,7 @@
         <!-- Scripts -->
         <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
+        <script src="../js/extensions/nwcontextmenu.js"></script>
 
         <!-- Modules -->
         <script>
