--- a/frames/movies.html
+++ b/frames/movies.html
@@ -10,6 +10,7 @@
         <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
         <script src="../js/extensions/jquery.isotope.min.js"></script>
+        <script src="../js/extensions/nwcontextmenu.js"></script>
 
         <!-- Modules -->
         <script>
