--- a/frames/players/player.html
+++ b/frames/players/player.html
@@ -5,6 +5,7 @@
         <title>Player</title>
         <!-- Javascripts -->
         <script type='text/javascript' src="/js/extensions/jquery.min.js"></script>
+        <script src="/js/extensions/nwcontextmenu.js"></script>
 
         <!-- Modules -->
         <script>
