--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -11,6 +11,7 @@
         <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
         <script src="../js/extensions/bootstrap-paginator.min.js"></script>
+        <script src="../js/extensions/nwcontextmenu.js"></script>
 
         <!-- Modules -->
         <script>
