--- a/frames/movies.html
+++ b/frames/movies.html
@@ -212,58 +212,61 @@
                             //Search for movies
                             callwcf.searchMovies(movieFilter.sort, movieFilter.searchValue, movieFilter.genre, movieFilter.max, movieFilter.page, movieFilter.order, function(results) {
                                 var content = "";
-                                $(results).each(function(index) {
-                                    var movie = results[index];
+                                if( results !== 'error' ) {
+                                    $(results).each(function(index) {
+                                        var movie = results[index];
 
-                                    if ($('#'+movie.imdbCode).length > 0){
-                                        return true;
-                                    }
-
-                                    if (typeof movie.poster !== 'undefined') {
-                                        var newChars = '-300';
-                                        var position = movie.poster.lastIndexOf(".");
-                                        var tmpOne = movie.poster.substr(0, position);
-                                        var tmpTwo = movie.poster.substr(position, movie.poster.length);
-                                        var moviePoster = tmpOne + newChars + tmpTwo;
-                                    }
-                                    else {
-                                        var moviePoster = '../images/no-poster.png';
-                                    }
-                                    if (typeof movie.genres !== 'undefined') {
-                                        var splitGem = movie.genres.split(',');
-                                        var translatedGen;
-                                        var translatedGenres = [];
-                                        $(splitGem).each(function(index) {
-                                            var gen = splitGem[index];
-                                            gen = gen.trim();
-                                            translatedGen = translations.translate(gen);
-                                             translatedGenres.push(translatedGen);
-                                        })
-
-                                        for (var i = 0; i < translatedGenres.length; ++i) {
-                                            translatedGenres[i] = translatedGenres[i].replace(" ", "-");
+                                        if ($('#'+movie.imdbCode).length > 0){
+                                            return true;
                                         }
-                                        var genres = translatedGenres.join(", ");
 
-                                    }
-                                    else {
-                                        var genres = '';
-                                    }
+                                        if (typeof movie.poster !== 'undefined') {
+                                            var newChars = '-300';
+                                            var position = movie.poster.lastIndexOf(".");
+                                            var tmpOne = movie.poster.substr(0, position);
+                                            var tmpTwo = movie.poster.substr(position, movie.poster.length);
+                                            var moviePoster = tmpOne + newChars + tmpTwo;
+                                        }
+                                        else {
+                                            var moviePoster = '../images/no-poster.png';
+                                        }
+                                        if (typeof movie.genres !== 'undefined') {
+                                            var splitGem = movie.genres.split(',');
+                                            var translatedGen;
+                                            var translatedGenres = [];
+                                            $(splitGem).each(function(index) {
+                                                var gen = splitGem[index];
+                                                gen = gen.trim();
+                                                translatedGen = translations.translate(gen);
+                                                 translatedGenres.push(translatedGen);
+                                            })
 
-                                    content += "<div id='" + movie.imdbCode + "' class='element transition m-10 isotope-item'>" +
-                                            "<a class='shadow' onClick='showDetails(this);'>" +
-                                            "<div style='display: none'>"+JSON.stringify(movie)+"</div> " +
-                                            "<img alt='image' src='" + moviePoster + "' style='width:160px; height:230px;'>" +
-                                            "</a>" +
-                                            "<div class='p-5' style='max-width:160px;'>" +
-                                            "<div style='font-size:14px;'>" + movie.title + "</div>" +
-                                            "<div style='font-size:10px; color:#A8A8A8;'>" + genres + "</div>" +
-                                            "</div>" +
-                                            "<div style='clear:both'></div>" +
-                                            "</div>";
-                                });
+                                            for (var i = 0; i < translatedGenres.length; ++i) {
+                                                translatedGenres[i] = translatedGenres[i].replace(" ", "-");
+                                            }
+                                            var genres = translatedGenres.join(", ");
 
-                                $('.spinner-overlay').remove();
+                                        }
+                                        else {
+                                            var genres = '';
+                                        }
+
+                                        content += "<div id='" + movie.imdbCode + "' class='element transition m-10 isotope-item'>" +
+                                                "<a class='shadow' onClick='showDetails(this);'>" +
+                                                "<div style='display: none'>"+JSON.stringify(movie)+"</div> " +
+                                                "<img alt='image' src='" + moviePoster + "' style='width:160px; height:230px;'>" +
+                                                "</a>" +
+                                                "<div class='p-5' style='max-width:160px;'>" +
+                                                "<div style='font-size:14px;'>" + movie.title + "</div>" +
+                                                "<div style='font-size:10px; color:#A8A8A8;'>" + genres + "</div>" +
+                                                "</div>" +
+                                                "<div style='clear:both'></div>" +
+                                                "</div>";
+                                    });
+                                }
+                                else {
+                                    console.log("Service not available");
+                                }
 
                                 if (content !== "") {
 
@@ -273,6 +276,8 @@
 
                                     $( ".element" ).last().addClass('last');
                                 }
+
+                                $('.spinner-overlay').remove();
                             });
                         }
 
