--- a/frames/series.html
+++ b/frames/series.html
@@ -187,30 +187,36 @@
                             callwcf.searchSeries( serieFilter.sort, serieFilter.searchValue, serieFilter.genre, serieFilter.max, serieFilter.page, function(results) {
 
                                 var content = "";
-                                $(results).each(function(index) {
-                                    var serie = results[index];
+                                if( results !== 'error' ) {
+                                    $(results).each(function(index) {
+                                        var serie = results[index];
 
-                                    if (typeof serie.images.poster !== 'undefined') {
-                                        var newChars = "-300";
-                                        var position = serie.images.poster.lastIndexOf(".");
-                                        var tmpOne = serie.images.poster.substr(0, position);
-                                        var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
-                                        var seriePoster = tmpOne + newChars + tmpTwo;
-                                    }
-                                    else {
-                                        var seriePoster = '../images/no-poster.png';
-                                    }
-                                    content += "<div class='element transition m-10 isotope-item'>" +
-                                        "<a class='shadow' onClick='showDetails(this);'>" +
-                                        "<div style='display: none'>"+serie._id+"</div> " +
-                                        "<img alt='image' src='" + seriePoster + "' style='width:160px; height:230px;'/>" +
-                                        "</a>" +
-                                        "<div class='p-5' style='max-width:160px;'>" +
-                                        "<div style='font-size:14px;'>" + serie.title + "</div>" +
-                                        "</div>" +
-                                        "<div style='clear:both'></div>" +
-                                        "</div>";
-                                });
+                                        if (typeof serie.images.poster !== 'undefined') {
+                                            var newChars = "-300";
+                                            var position = serie.images.poster.lastIndexOf(".");
+                                            var tmpOne = serie.images.poster.substr(0, position);
+                                            var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
+                                            var seriePoster = tmpOne + newChars + tmpTwo;
+                                        }
+                                        else {
+                                            var seriePoster = '../images/no-poster.png';
+                                        }
+                                        content += "<div class='element transition m-10 isotope-item'>" +
+                                            "<a class='shadow' onClick='showDetails(this);'>" +
+                                            "<div style='display: none'>"+serie._id+"</div> " +
+                                            "<img alt='image' src='" + seriePoster + "' style='width:160px; height:230px;'/>" +
+                                            "</a>" +
+                                            "<div class='p-5' style='max-width:160px;'>" +
+                                            "<div style='font-size:14px;'>" + serie.title + "</div>" +
+                                            "</div>" +
+                                            "<div style='clear:both'></div>" +
+                                            "</div>";
+                                    });
+
+                                }
+                                else {
+                                    console.log("Service not available");
+                                }
 
                                 if (content != "") {
 
@@ -268,89 +274,95 @@
                             var serie=  serieID.firstChild.innerHTML;
 
                             callwcf.searchSerieDetail( serie, function(results) {
-                                console.log(results);
-                                serie = results;
+                                if( results !== 'error' ) {
+                                    console.log(results);
+                                    serie = results;
 
-                                //Insert backdrop path
-                                $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+serie.images.fanart+") no-repeat center center fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
+                                    //Insert backdrop path
+                                    $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+serie.images.fanart+") no-repeat center center fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
 
-                                //Set variables to html
-                                var newChars = '-300';
-                                var position = serie.images.poster.lastIndexOf(".");
-                                var tmpOne = serie.images.poster.substr(0, position);
-                                var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
-                                var seriePoster = tmpOne + newChars + tmpTwo;
-                                $("#poster").attr('src', seriePoster);
+                                    //Set variables to html
+                                    var newChars = '-300';
+                                    var position = serie.images.poster.lastIndexOf(".");
+                                    var tmpOne = serie.images.poster.substr(0, position);
+                                    var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
+                                    var seriePoster = tmpOne + newChars + tmpTwo;
+                                    $("#poster").attr('src', seriePoster);
 
-                                $("#title").html(serie.title);
+                                    $("#title").html(serie.title);
 
-                                var translatedGen;
-                                var translatedGenres = [];
-                                $(serie.genres).each(function(index) {
-                                    var gen = serie.genres[index];
-                                    gen = gen.trim();
-                                    translatedGen = translations.translate(gen);
-                                    translatedGenres.push(translatedGen);
-                                })
-                                var genres = translatedGenres.join(", ");
-                                $("#genres").append(genres);
+                                    var translatedGen;
+                                    var translatedGenres = [];
+                                    $(serie.genres).each(function(index) {
+                                        var gen = serie.genres[index];
+                                        gen = gen.trim();
+                                        translatedGen = translations.translate(gen);
+                                        translatedGenres.push(translatedGen);
+                                    })
+                                    var genres = translatedGenres.join(", ");
+                                    $("#genres").append(genres);
 
-                                if(serie.synopsis) {
-                                    $("#plot").html(serie.synopsis);
-                                }else {
-                                    $("#plot").addClass("hide");
-                                }
+                                    if(serie.synopsis) {
+                                        $("#plot").html(serie.synopsis);
+                                    }else {
+                                        $("#plot").addClass("hide");
+                                    }
 
-                                var translatedepisodes = translations.translate('episode');
-                                if(serie.runtime) {
-                                    $("#runtime").append(serie.runtime + "m / "+translatedepisodes);
-                                } else {
-                                    $("#runtime").addClass("hide");
-                                }
+                                    var translatedepisodes = translations.translate('episode');
+                                    if(serie.runtime) {
+                                        $("#runtime").append(serie.runtime + "m / "+translatedepisodes);
+                                    } else {
+                                        $("#runtime").addClass("hide");
+                                    }
 
-                                if(serie.year) {
-                                    $("#date").append(serie.year);
-                                } else {
-                                    $("#date").addClass("hide");
-                                }
+                                    if(serie.year) {
+                                        $("#date").append(serie.year);
+                                    } else {
+                                        $("#date").addClass("hide");
+                                    }
 
-                                if( serie.num_seasons <= 1 ) {
-                                    var translatedSeasons = translations.translate('season');
+                                    if( serie.num_seasons <= 1 ) {
+                                        var translatedSeasons = translations.translate('season');
+                                    }
+                                    else {
+                                        var translatedSeasons = translations.translate('seasons');
+                                    }
+                                    $("#info").append(+ serie.num_seasons + " "+translatedSeasons);
+
+                                    var translatedStatus = translations.translate(serie.status);
+                                    $("#status").html(translatedStatus);
+
+                                    if(serie.network) {
+                                        $("#network").append(serie.network);
+                                    } else {
+                                        $("#network").addClass("hide");
+                                    }
+
+                                    $("#rating").attr("style", "width:" + serie.rating.percentages + "% !important");
+
+                                    $("#btnBuy").click(function () {
+                                        var shoppingUrl = 'https://www.google.com/search?q='+serie.title+' series/season&tbm=shop';
+                                        gui.Shell.openExternal(shoppingUrl);
+
+                                    });
+
+                                    $("#btnEpisodeList").click(function () {
+                                        main.go("players/serie-player.html?serieId=" + serie._id);
+                                    });
+
+                                    $("#content-overlay").show();
+                                    $("#serie").show();
+                                    $("#side-bar-full").hide();
+                                    $("#content").css("opacity", "0");
+                                    $('#side-bar-small').attr("style", "display: none !important");
+                                    $("#head-bar").hide();
+                                    $('#customCSS').animate({opacity: 0}, 0).animate({opacity: 1}, 2000);
                                 }
                                 else {
-                                    var translatedSeasons = translations.translate('seasons');
-                                }
-                                $("#info").append(+ serie.num_seasons + " "+translatedSeasons);
-
-                                var translatedStatus = translations.translate(serie.status);
-                                $("#status").html(translatedStatus);
-
-                                if(serie.network) {
-                                    $("#network").append(serie.network);
-                                } else {
-                                    $("#network").addClass("hide");
+                                    console.log("Service not available");
                                 }
 
-                                $("#rating").attr("style", "width:" + serie.rating.percentages + "% !important");
-
-                                $("#btnBuy").click(function () {
-                                    var shoppingUrl = 'https://www.google.com/search?q='+serie.title+' series/season&tbm=shop';
-                                    gui.Shell.openExternal(shoppingUrl);
-
-                                });
-
-                                $("#btnEpisodeList").click(function () {
-                                    main.go("players/serie-player.html?serieId=" + serie._id);
-                                });
-
-                                $("#content-overlay").show();
-                                $("#serie").show();
-                                $("#side-bar-full").hide();
-                                $("#content").css("opacity", "0");
-                                $('#side-bar-small').attr("style", "display: none !important");
                                 $('.spinner-overlay').remove();
-                                $("#head-bar").hide();
-                                $('#customCSS').animate({opacity: 0}, 0).animate({opacity: 1}, 2000);
                             });
 
                         }
