Change video tab to 3d tab on torrent section

--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -399,7 +399,7 @@
                                         <a class="sectionSeries" onclick="changeCategory('series');"></a>
                                     </li>
                                     <li id="linkVideos">
-                                        <a class="sectionVideos" onclick="changeCategory('videos');"></a>
+                                        <a class="section3D" onclick="changeCategory('videos');"></a>
                                     </li>
                                 </ul>
 
