--- a/frames/settings.html
+++ b/frames/settings.html
@@ -315,10 +315,18 @@
                                 <select id="language" class="form-control">
                                     <option value="en">English</option>
                                     <option value="be">Belgium</option>
+                                    <option value="cs">Czech</option>
+                                    <option value="da">Danish</option>
                                     <option value="nl">Dutch</option>
+                                    <option value="fi">Finnish</option>
                                     <option value="fr">French</option>
                                     <option value="de">German</option>
                                     <option value="gr">Greek</option>
+                                    <option value="no">Norwegian</option>
+                                    <option value="pt-br">Portuguese (Brazil)</option>
+                                    <option value="ru">Russian</option>
+                                    <option value="sk">Slovak</option>
+                                    <option value="sv">Swedish</option>
                                     <option value="tr">Turkish</option>
                                 </select>
                             </div>
