--- a/frames/series.html
+++ b/frames/series.html
@@ -442,6 +442,7 @@
                                 console.log(e);
                             }
 
+                            $("#customCSS").removeAttr('style');
                             $("#customCSS").empty();
                             $("#content-overlay").hide();
                             $("#serie").hide();
