--- a/frames/movies.html
+++ b/frames/movies.html
@@ -40,12 +40,6 @@
                 //By default we filter by most downloaded
                 changeFilterCategory("Most downloaded");
 
-                //Persistence
-                if(sessionStorage.movie) {
-                    var movie = $.parseJSON(sessionStorage.movie);
-                    //showDetails(movie.MovieId);
-                }
-
                 $("#txtMovieSearch").bind('keyup paste', function() {
                     clearTimeout($(this).data('timeout'));
                     $(this).data('timeout', setTimeout(function(){
@@ -62,19 +56,13 @@
                 });
 
                 $.fn.inView = function(){
-                    //Window Object
                     var win = $(window);
-                    //Object to Check
                     obj = $(this);
-                    //the top Scroll Position in the page
                     var scrollPosition = win.scrollTop();
-                    //the end of the visible area in the page, starting from the scroll position
                     var visibleArea = win.scrollTop() + win.height();
-                    //the end of the object to check
                     var objEndPos = (obj.offset().top + obj.outerHeight());
 
                     return(visibleArea >= objEndPos && scrollPosition <= objEndPos ? true : false)
-
                 };
 
                 $('#movieContainer').scroll(function() {
@@ -293,7 +281,6 @@
                             $('#date').empty();
                             $('#date').append('<span class="glyphicon glyphicon-calendar"></span>&nbsp;&nbsp;');
 
-                            console.log(movie);
                             //Insert backdrop path
                             $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+movie.fanart+") no-repeat center center fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
 
@@ -380,7 +367,7 @@
                             $("#side-bar-full").hide();
                             $("#content").css("opacity", "0");
                             $('#side-bar-small').attr("style", "display: none !important");
-                            $('#customCSS').animate({opacity: 0}, 0).animate({opacity: 1}, 2000);
+                            $('#customCSS').animate({opacity: 0}, 0).animate({opacity: 1}, 3500);
                         }
 
                         function changeSearchText() {
@@ -490,6 +477,8 @@
                                 console.log(e);
                             }
 
+                            $("#customCSS").stop();
+                            $("#customCSS").removeAttr('style');
                             $("#customCSS").empty();
                             $("#content-overlay").hide();
                             $("#movie").hide();
