--- a/frames/settings.html
+++ b/frames/settings.html
@@ -66,6 +66,10 @@
                         <span class="glyphicon glyphicon-th-list"></span></a>
                 </li>
                 <br><br>
+                <li id="side-bar-li-favorites" onclick="main.changeFrame('favorites')">
+                    <a class="menuFavorites" href="#">
+                        <span class="glyphicon glyphicon-heart"></span></a>
+                </li>
                 <li id="side-bar-li-settings" class="on" onclick="main.changeFrame('settings')">
                     <a class="menuSettings" href="#">
                         <span class="glyphicon glyphicon-cog"></span></a>
@@ -90,6 +94,10 @@
                     </a>
                 </li>
                 <br><br>
+                <li id="side-bar-li-favorites-sm" onclick="main.changeFrame('favorites')">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-heart"></span></a>
+                </li>
                 <li id="side-bar-li-settings-sm" class="on" onclick="main.changeFrame('settings')">
                     <a href="#">
                         <span class="glyphicon glyphicon-cog"></span>
