--- a/frames/series.html
+++ b/frames/series.html
@@ -19,6 +19,7 @@
             var callwcf = require('../js/callwcf.js');
             var gui = require('nw.gui');
             var yifysubtitle = require('../js/yifysubtitle.js');
+            var favorites = require('../js/favorites.js');
             var translations = require('../js/translations.js');
 
             $(document).ready(function() {
@@ -137,6 +138,10 @@
                                 <span class="glyphicon glyphicon-th-list"></span></a>
                         </li>
                         <br><br>
+                        <li id="side-bar-li-favorites" onclick="main.changeFrame('favorites')">
+                            <a class="menuFavorites" href="#">
+                                <span class="glyphicon glyphicon-heart"></span></a>
+                        </li>
                         <li id="side-bar-li-settings" onclick="main.changeFrame('settings')">
                             <a class="menuSettings" href="#">
                                 <span class="glyphicon glyphicon-cog"></span></a>
@@ -161,6 +166,10 @@
                             </a>
                         </li>
                         <br><br>
+                        <li id="side-bar-li-favorites-sm" onclick="main.changeFrame('favorites')">
+                            <a href="#">
+                                <span class="glyphicon glyphicon-heart"></span></a>
+                        </li>
                         <li id="side-bar-li-settings-sm" onclick="main.changeFrame('settings')">
                             <a href="#">
                                 <span class="glyphicon glyphicon-cog"></span>
@@ -270,6 +279,7 @@
                         function showDetails(serieID) {
                             $("#wrapper").append("<div id='main-spinner' class='spinner-overlay'></div>");
                             $('#title' ).empty();
+                            $('.favorites-template').empty();
                             $('#genres').empty();
                             $('#rating').css('width', '0% !important');
                             $('#rating').attr('title', '');
@@ -282,11 +292,20 @@
                             $('#info').empty();
                             $('#info').append('<span class="glyphicon glyphicon-info-sign"></span>&nbsp;&nbsp;');
 
-                            var serie=  serieID.firstChild.innerHTML;
+                            var serie = serieID.firstChild.innerHTML;
 
                             callwcf.searchSerieDetail( serie, function(results) {
                                 if( results !== 'error' ) {
                                     serie = results;
+
+                                    favorites.checkIfFavorite( serie.imdb_id, function(result) {
+                                        if( result == true ) {
+                                            $(".favorites-template").append('<label onclick="removeFromFavorites(this)" title="Remove from favorites" class="current-favorites"><div style="display: none">'+JSON.stringify(serie)+'</div>&nbsp;&nbsp;<i class="glyphicon glyphicon-heart"></i></label>');
+                                        }
+                                        else {
+                                            $(".favorites-template").append('<label onclick="addToFavorites(this);" title="Add to favorites" class="current-favorites"><div style="display: none">'+JSON.stringify(serie)+'</div>&nbsp;&nbsp;<i class="glyphicon glyphicon-heart-empty"></i></label>');
+                                        }
+                                    })
 
                                     //Insert backdrop path
                                     $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+serie.images.fanart+") no-repeat center center fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
@@ -465,6 +484,22 @@
                             $("#head-bar").show();
                             $( "#btnBuy").unbind( "click" );
                         }
+
+                        function addToFavorites(seriesJson) {
+                            $('.favorites-template').empty();
+                            var series = $.parseJSON(seriesJson.firstChild.innerHTML);
+                            series.type = 'series';
+                            favorites.addToFavorites(series);
+                            $(".favorites-template").append('<label onclick="removeFromFavorites(this);" title="Remove from favorites" class="current-favorites"><div style="display: none">'+JSON.stringify(series)+'</div>&nbsp;&nbsp;<i class="glyphicon glyphicon-heart"></i></label>');
+                        }
+
+                        function removeFromFavorites(seriesJson) {
+                            $('.favorites-template').empty();
+                            var series = $.parseJSON(seriesJson.firstChild.innerHTML);
+                            favorites.removeFromFavorites(series.imdb_id);
+                            $(".favorites-template").append('<label onclick="addToFavorites(this);" title="Add to favorites" class="current-favorites"><div style="display: none">'+JSON.stringify(series)+'</div>&nbsp;&nbsp;<i class="glyphicon glyphicon-heart-empty"></i></label>');
+                        }
+
                     </script>
 
                     <div id="head-bar" class="p-10">
@@ -618,6 +653,8 @@
                                     <h4 id="genres" class="mr-10" style="display:inline-block;"></h4>
                                     <div class="stars-template" style="display:inline-block;">
                                         <div title="" id="rating" class="current-rating"></div>
+                                    </div>
+                                    <div class="favorites-template" style="display:inline-block;">
                                     </div>
                                     <div id="plot" class="ptb-10" style="max-width:800px;"></div>
                                     <div id="network">This serie is aired on </div>
