--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -138,6 +138,10 @@
                                 <span class="glyphicon glyphicon-th-list"></span></a>
                         </li>
                         <br><br>
+                        <li id="side-bar-li-favorites" onclick="main.changeFrame('favorites')">
+                            <a class="menuFavorites" href="#">
+                                <span class="glyphicon glyphicon-heart"></span></a>
+                        </li>
                         <li id="side-bar-li-settings" onclick="main.changeFrame('settings')">
                             <a class="menuSettings" href="#">
                                 <span class="glyphicon glyphicon-cog"></span></a>
@@ -162,6 +166,10 @@
                             </a>
                         </li>
                         <br><br>
+                        <li id="side-bar-li-favorites-sm" onclick="main.changeFrame('favorites')">
+                            <a href="#">
+                                <span class="glyphicon glyphicon-heart"></span></a>
+                        </li>
                         <li id="side-bar-li-settings-sm" onclick="main.changeFrame('settings')">
                             <a href="#">
                                 <span class="glyphicon glyphicon-cog"></span>
